    be caused by earlier use in RAID array, tell the user how to solve the
    problem). Ignore exit code 3 of vol_id -l, use fai-vol_id wrapper.
  * setup-storage/Parser.pm: RAID device parsing: $2 doesn't refer to the
    original expression anymore, store earlier $2 as $opts; don't use options
    sub-hash (thanks Andreas Schockenhoff for lots of testing and feedback).
  * setup-storage/Sizes.pm: Properly deal with missing (as in RAID specs) or
    non-existing (user error) devices in estimate_size; don't do stupid divide
    by 2 in RAID1 setup. (closes: #525138)
  * setup-storage/Commands.pm: Proper use of hash reference when checking for
    "missing" option.
  * setup-storage/Parser.pm: Ensure that RAID volumes marked preserve don't
    count as extra RAID volumes being defined.
  * setup-storage/Parser.pm, setup-storage/Sizes.pm: Added support for raid10
    (thanks William Francis for suggesting this).
  * setup-storage/Volumes.pm: Fixed perl syntax error, properly handle
    existing empty volume groups (thanks Brian Kroth and Cajus Pollmeier for
    debugging this).  (closes: #532321)
  * man/setup-storage.8: Document possible problems with previous software
    RAID partitions and missing bootable flags.
  * setup-storage/Sizes.pm: Secondary GPT only requires 33 sectors.
  * Bumped setup-storage version number to 1.1.1.
 
  [ Holger Levsen ]
  * update to standards version 3.8.2, no changes needed
 
 -- Thomas Lange <lange@debian.org>  Thu, 29 Oct 2009 16:23:01 +0100

fai (3.2.20) unstable; urgency=low

  [ Thomas Lange ]
  * menu.lst: remove year
  * fai-cd: add option -B, that creates a boot-only CD (without containing
    the nfsroot, the partitial mirror and the config space)
  * conf/menu.lst.boot-only: new config file for the boot only CD
  * fai-cd.8: add option -B
  * fai-abort: add missing lsb header
  * control: remove duplicate fields
  * copyright: fix lintian warning
  
  [ Michael Tautschnig ]