@@ -145,6 +145,8 @@ fai (3.2.23~beta35) unstable; urgency=low
   * setup-storage/Parser.pm: RAID device parsing: $2 doesn't refer to the
     original expression anymore, store earlier $2 as $opts; don't use options
     sub-hash (thanks Andreas Schockenhoff for lots of testing and feedback).
+    setup-storage/Parser.pm: LVM volume groups or RAID arrays may now refer to
+    diskX to use the entire disk (thanks Mathieu Alorent).
   * setup-storage/Sizes.pm: Properly deal with missing (as in RAID specs) or
     non-existing (user error) devices in estimate_size; don't do stupid divide
     by 2 in RAID1 setup. (closes: #525138)
@@ -160,7 +162,7 @@ fai (3.2.23~beta35) unstable; urgency=low
   * man/setup-storage.8: Document possible problems with previous software
     RAID partitions and missing bootable flags.
   * setup-storage/Sizes.pm: Secondary GPT only requires 33 sectors.
-  * Bumped setup-storage version number to 1.1.1.
+  * Bumped setup-storage version number to 1.1.2.
  
   [ Holger Levsen ]
   * update to standards version 3.8.2, no changes needed
